# pyfairdatatools

./: .appveyor.yml  .flake8  .gitignore  .markdownlint.json  404.html  CHANGELOG.md  LICENSE.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  scent.py  search.html
.github/workflows/: ci.yml  deploy-schemas.yml  main.yml  publish-to-pypi-beta.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  release-please.yml
about/changelog/: index.html
about/contributing/: index.html
about/license/: index.html
changes/: clinicaltrials.md  datacite.md
dev/: pull_schemas.py
dev/changes/: datacite.md
docs/: advanced.md  index.md
docs/about/: changelog.md  contributing.md  license.md
docs/modules/: generate.md  validate.md
docs/schemas/: dataset_description.md  participants.md  readme.md
fairdatatools/: __init__.py  __main__.py  cli.py
fairdatatools/tests/: test_utils.py
modules/generate/: index.html
modules/validate/: index.html
notebooks/: validate_folder_structure.ipynb
pyfairdatatools/: __init__.py  __main__.py  cfpir.py  cfpir_converter.py  cfpir_metadata_extract.py  classifying_rules.py  cli.py  clinical-trials-api.py  flio_reader.py  generate-cds.py  generate.py  generate_study_description_c_trials.py  identifier.py  image_classifying_rules.py  oct.py  oct_converter.py  oct_functional_groups.py  oct_metadata_extract.py  standards.py  utils.py  validate.py
pyfairdatatools/assets/: datatype_dictionary.yaml  languages.json  licenses.json
pyfairdatatools/schemas/: dataset_description.schema.json  datatype_dictionary.schema.json  folder_structure.schema.json  oldds.json  participants.schema.json  readme.schema.json  study_description.schema.json
pyfairdatatools/templates/: README.mdtxt.template
pyfairdatatools/tests/: test_generate.py  test_utils.py  test_validate.py
search/: search_index.json
tests/: conftest.py  dev.py  test_cli.py  test_generate.py  test_utils.py  test_validate.py
