[tool.poetry]

name = "pyfairdatatools"
version = "1.0.1"
description = "Tools for AI-READI"

packages = [{ include = "pyfairdatatools" }]

license = "MIT"
authors = ["FAIR Data Innovations Hub <contact@fairdataihub.org>"]

readme = "README.md"
homepage = "https://pypi.org/project/pyfairdatatools"
documentation = "https://pyfairdatatools.readthedocs.io"
repository = "https://github.com/AI-READI/pyfairdatatools"

keywords = [
]
classifiers = [
    # TODO: update this list to match your application: https://pypi.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]

python = "^3.8"
urllib3="<2.0"

# TODO: Remove these and add your library's requirements
click = "*"
minilog = "*"
jsonschema = "^4.17.3"
dicttoxml = "^1.7.16"
types-requests = "^2.30.0.0"
pymdown-extensions = "^10.0.1"
validators = "^0.20.0"
art = "^6.0"
isort = "^5.12.0"


[tool.poetry.dev-dependencies]

# Formatters
black = "^22.1"
tomli = "*" # missing 'black' dependency

# Linters
mypy = "^1.0"
pydocstyle = "^6.1"
pylint = "~2.15"
wrapt = "*" # missing 'pylint' dependency

# Testing
pytest = "^7.1"
pytest-describe = "^2.0"
pytest-expecter = "^3.0"
pytest-random = "*"
pytest-cov = "^3.0"
freezegun = "*"

# Reports
coveragespace = "^6.0"

# Documentation
mkdocs = "~1.3"
pygments = "^2.11.1"

# Tooling
pyinstaller = "*"
sniffer = "*"
MacFSEvents = { version = "*", platform = "darwin" }
pync = { version = "*", platform = "darwin" }
ipython = "^7.12.0"

[tool.poetry.scripts]

pyfairdatatools = "pyfairdatatools.cli:main"


[tool.poetry.group.dev.dependencies]
poethepoet = "^0.20.0"
jupyter = "^1.0.0"

[tool.poe.tasks]

docs = "mkdocs serve"

format_with_isort = "isort pyfairdatatools tests notebooks"
format_with_black = "black pyfairdatatools tests notebooks"

format = ["format_with_isort", "format_with_black"]

typecheck = "mypy pyfairdatatools tests"

pylint = "pylint pyfairdatatools tests --rcfile=.pylint.ini"

precommit = ["format", "typecheck", "pylint"]

test = "pytest -rx" 

jupyter = "jupyter notebook"

[tool.black]

quiet = true

[tool.isort]

profile = "black"

[tool.mypy]

ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true

cache_dir = ".cache/mypy/"

[tool.pytest.ini_options]

addopts = """
--strict-markers

-r sxX
--show-capture=log

--cov-report=html
--cov-report=term-missing:skip-covered
--no-cov-on-fail
"""

cache_dir = ".cache/pytest/"

markers = []

[build-system]

requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
